--- a/endnote.bib
+++ b/endnote.bib
@@ -76,4 +76,55 @@ http://dx.doi.org/10.18637/jss.v088.i02},
    type = {Journal Article}
 }
 
+﻿@article{Bakeman_2015_eff_size,
+   author = {Bakeman, Roger},
+   title = {Recommended effect size statistics for repeated measures designs},
+   journal = {Behavior Research Methods},
+   volume = {37},
+   number = {3},
+   pages = {379-384},
+   ISSN = {1554-351X},
+   DOI = {10.3758/BF03192707},
+   url = {http://dx.doi.org/10.3758/BF03192707
+http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
+   year = {2005},
+   type = {Journal Article}
+}
+
+﻿@article{Lakens_2013,
+   author = {Lakens, Daniël},
+   title = {Calculating and reporting effect sizes to facilitate cumulative science: a practical primer for t-tests and ANOVAs},
+   journal = {Frontiers in Psychology},
+   volume = {4},
+   pages = {863},
+   DOI = {10.3389/fpsyg.2013.00863},
+   url = {http://journal.frontiersin.org/Journal/10.3389/fpsyg.2013.00863/full},
+   year = {2013},
+   type = {Journal Article}
+}
+
+﻿@book{Jeffreys_1961,
+   author = {Jeffreys, Harold},
+   title = {Theory of probability},
+   publisher = {Oxford University Press},
+   address = {Oxford, UK},
+   edition = {3},
+   year = {1961},
+   type = {Book}
+}
+
+
+﻿@article{Schönbrodt_Perugini_2013,
+   author = {Schönbrodt, Felix D. and Perugini, Marco},
+   title = {At what sample size do correlations stabilize?},
+   journal = {Journal of Research in Personality},
+   volume = {47},
+   number = {5},
+   pages = {609-612},
+   ISSN = {0092-6566},
+   DOI = {10.1016/j.jrp.2013.05.009},
+   url = {http://www.sciencedirect.com/science/article/pii/S0092656613000858},
+   year = {2013},
+   type = {Journal Article}
+}
 
