--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -140,7 +140,43 @@ If not noted, E-prime 2.0 was used in all experiments. For participants recruite
 
 For participants recruited in Wenzhou University, they finished the experiment in a group consist of 3 \textasciitilde{} 12 participants in a dim-lighted testing room. Participants were required to finished the whole experiment independently. Also, they were instructed to start the experiment at the same time, so that the distraction between participants were minimized. The stimuli were presented on 19-inch CRT monitor. The visual angles are could not be exactly controlled because participants's chin were not fixed.
 
-In most of these experiments, participant were also asked to fill a battery of questionnaire after they finish the cognitive tasks. All the questionnaire data are open (see, dataset 4 in Liu, Wang, Yan, Peng, \& Hu, 2019).
+\begin{table}[tbp]
+\begin{center}
+\begin{threeparttable}
+\caption{\label{tab:Table1_exp_info}Information about all experiments.}
+\begin{tabular}{lllllllll}
+\toprule
+ExpID & \multicolumn{1}{c}{Year} & \multicolumn{1}{c}{Month} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{DV} & \multicolumn{1}{c}{Design} & \multicolumn{1}{c}{Self.ref} & \multicolumn{1}{c}{Valence} & \multicolumn{1}{c}{Presenting}\\
+\midrule
+Exp\_1a\_1 & 2014 & 4 & NA & behav & 3 * 2 & explicit & words & Simultaneously\\
+Exp\_1a\_2 & 2017 & 4 & NA & behav & 3 * 2 & explicit & words & Simultaneously\\
+Exp\_1b\_1 & 2014 & 10 & NA & behav & 3 * 2 & explicit & words & Simultaneously\\
+Exp\_1b\_2 & 2017 & 4 & NA & behav & 3 * 2 & explicit & words & Simultaneously\\
+Exp\_1c & 2014 & 10 & NA & behav & 3 * 2 & explicit & descriptions & Simultaneously\\
+Exp\_2 & 2014 & 5 & NA & behav & 3 * 2 & explicit & words & Sequentially\\
+Exp\_3a\_1 & 2014 & 11 & NA & behav & 3 * 2 * 2 & explicit & words & Simultaneously\\
+Exp\_3a\_2 & 2015 & 8 & NA & behav & 3 * 2 * 2 & explicit & words & Sequentially\\
+Exp\_3b & 2017 & 4 & NA & behav & 3 * 2 * 2 & explicit & words & Simultaneously\\
+Exp\_4a\_1 & 2015 & 6 & NA & behav & 3 * 2 * 2 & implicit & words & Simultaneously\\
+Exp\_4a\_2 & 2017 & 4 & NA & behav & 3 * 2 * 2 & implicit & words & Simultaneously\\
+Exp\_4b & 2015 & 10 & NA & behav & 3 * 2 * 2 & implicit & words & Simultaneously\\
+Exp\_4b\_2 & 2017 & 4 & NA & behav & 3 * 2 * 2 & implicit & words & Simultaneously\\
+Exp\_5 & 2016 & 1 & NA & behav & 3 * 2 * 4 & explicit & words & Simultaneously\\
+Exp\_6a & 2014 & 12 & NA & behav/EEG & 3 * 2 & explicit & words & Sequentially\\
+Exp\_6b & 2016 & 1 & NA & behav/EEG & 3 * 2 * 2 & explicit & words & Sequentially\\
+Exp\_7a & 2016 & 7 & NA & behav & 2 * 2 * 2 & explicit & words & Simultaneously\\
+Exp\_7b & 2018 & 5 & NA & behav & 2 * 2 * 2 & explicit & words & Simultaneously\\
+\bottomrule
+\addlinespace
+\end{tabular}
+\begin{tablenotes}[para]
+\normalsize{\textit{Note.} DV = dependent variables; Valence = how valence was manipulated; Shape \& Label = how shapes \& labels were presented.}
+\end{tablenotes}
+\end{threeparttable}
+\end{center}
+\end{table}
+
+In most of these experiments, participant were also asked to fill a battery of questionnaire after they finish the cognitive tasks. All the questionnaire data are open (see, dataset 4 in Liu, Wang, Yan, Peng, \& Hu, 2019). See Table @ref(table:Table1\_exp\_info) for a summary information about all the experiments reported here.
 
 \hypertarget{data-analysis}{%
 \subsection{Data analysis}\label{data-analysis}}
