--- a/endnote.bib
+++ b/endnote.bib
@@ -128,3 +128,13 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    type = {Journal Article}
 }
 
+﻿@article{Hu_2019_GoodSelf,
+   author = {Hu, Chuan-Peng and Lan, Yuxuan and Macrae, C. Neil and Sui, Jie},
+   title = {Good Me Bad Me: Does Valence Influence Self-Prioritization During Perceptual Decision-Making?},
+   journal = {PsyArxiv},
+   DOI = {10.31234/osf.io/9fczh},
+   url = {https://psyarxiv.com/9fczh},
+   year = {2019},
+   type = {Journal Article}
+}
+
