finished data loading!

--- a/endnote.bib
+++ b/endnote.bib
@@ -138,3 +138,28 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    type = {Journal Article}
 }
 
+﻿@article{Goh_2016_mini,
+   author = {Goh, Jin X. and Hall, Judith A. and Rosenthal, Robert},
+   title = {Mini Meta-Analysis of Your Own Studies: Some Arguments on Why and a Primer on How},
+   journal = {Social and Personality Psychology Compass},
+   volume = {10},
+   number = {10},
+   pages = {535-549},
+   ISSN = {1751-9004},
+   DOI = {10.1111/spc3.12267},
+   url = {http://dx.doi.org/10.1111/spc3.12267},
+   year = {2016},
+   type = {Journal Article}
+}
+
+﻿@book{Cooper_2009_handbook,
+   author = {Cooper, Harris and Hedges, Larry V and Valentine, Jeffrey C},
+   title = {The handbook of research synthesis and meta-analysis},
+   publisher = {Sage},
+   address = {New York},
+   edition = {2},
+   ISBN = {1610441389},
+   year = {2009},
+   type = {Book}
+}
+
